// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IgaGlossaryOps createGlossarySchema() 1: Create Glossary Schema Export Template 1`] = `
{
  "allowedValues": [],
  "description": "Test Role Description",
  "displayName": "Test Role Display Name",
  "enumeratedValues": [],
  "id": "2b899bc7-e5f2-4a81-b5e9-7917e2db56af",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/role",
  "name": "testRole",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps createGlossarySchemaExportTemplate() 1: Create Glossary Schema Export Template 1`] = `
{
  "glossarySchema": {},
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps deleteGlossarySchema() 1: Delete existing glossary schema by id 1`] = `
{
  "allowedValues": [],
  "description": "Test Organization Description",
  "displayName": "Test Organization Display Name",
  "enumeratedValues": [],
  "id": "2133dfb9-7af2-4543-bcc5-74a884053b18",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/organization",
  "metadata": {
    "createdDate": "2026-05-22T21:32:05.63739784Z",
    "modifiedDate": "2026-05-22T21:32:05.637399501Z",
  },
  "name": "testOrg",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps deleteGlossarySchemaByName() 1: Delete existing glossary schema by name 1`] = `
{
  "allowedValues": [],
  "description": "Test User Description",
  "displayName": "Test User Display Name",
  "enumeratedValues": [],
  "id": "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/user",
  "metadata": {
    "createdDate": "2026-05-22T21:32:07.658008319Z",
    "modifiedDate": "2026-05-22T21:32:07.658010331Z",
  },
  "name": "testUser",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps exportGlossarySchema() 1: Export existing glossary schema by ID 1`] = `
{
  "glossarySchema": {
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T21:31:59.65680504Z",
        "modifiedDate": "2026-05-22T21:31:59.656806762Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemaByName() 1: Export existing glossary schema by name and objectype 1`] = `
{
  "glossarySchema": {
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T21:31:59.65680504Z",
        "modifiedDate": "2026-05-22T21:31:59.656806762Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemas() 1: Export existing glossary schemas without internal 1`] = `
{
  "glossarySchema": {
    "0f7e9eb7-f40b-4800-a58f-64ec85eb158f": {
      "allowedValues": [],
      "description": "Test User",
      "displayName": "Test User",
      "enumeratedValues": [],
      "id": "0f7e9eb7-f40b-4800-a58f-64ec85eb158f",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-05-22T20:53:29.306203855Z",
        "modifiedDate": "2026-05-22T20:53:29.306206494Z",
      },
      "name": "Test User",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "13118f54-6b81-4549-8cb5-3ca2996b13af": {
      "allowedValues": [
        "sales",
        "finance",
        "hr",
        "null",
      ],
      "description": "Application grant workflows example for LOB determines who it should go to",
      "displayName": "Line Of Business",
      "enumeratedValues": [
        {
          "text": "Sales",
          "value": "sales",
        },
        {
          "text": "Finance",
          "value": "finance",
        },
        {
          "text": "Human Resources",
          "value": "hr",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "13118f54-6b81-4549-8cb5-3ca2996b13af",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:42.438045793Z",
        "modifiedDate": "2026-05-22T20:53:42.438047509Z",
      },
      "name": "lineOfBusiness",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "16c42f91-43a0-4b89-8ece-0221df554aa4": {
      "allowedValues": [
        0,
        1,
        2,
      ],
      "description": "Test Integer Description",
      "displayName": "Test Integer Display Name",
      "enumeratedValues": [
        {
          "text": 1,
          "value": 0,
        },
        {
          "text": 2,
          "value": 1,
        },
        {
          "text": 3,
          "value": 2,
        },
      ],
      "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T21:32:01.620287931Z",
        "modifiedDate": "2026-05-22T21:32:01.620290585Z",
      },
      "name": "testInteger",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "integer",
    },
    "1ff97005-8ba6-4249-8d4f-9a69d5ad09d2": {
      "allowedValues": [],
      "description": "Test Role",
      "displayName": "Test Role",
      "enumeratedValues": [],
      "id": "1ff97005-8ba6-4249-8d4f-9a69d5ad09d2",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-05-22T20:53:37.397504751Z",
        "modifiedDate": "2026-05-22T20:53:37.397506512Z",
      },
      "name": "Test Role",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "2133dfb9-7af2-4543-bcc5-74a884053b18": {
      "allowedValues": [],
      "description": "Test Organization Description",
      "displayName": "Test Organization Display Name",
      "enumeratedValues": [],
      "id": "2133dfb9-7af2-4543-bcc5-74a884053b18",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-05-22T21:32:05.63739784Z",
        "modifiedDate": "2026-05-22T21:32:05.637399501Z",
      },
      "name": "testOrg",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "2924e262-4728-4a5f-a342-3044d7939192": {
      "allowedValues": [],
      "description": "",
      "displayName": "Is Privileged",
      "enumeratedValues": [],
      "id": "2924e262-4728-4a5f-a342-3044d7939192",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:34.347952176Z",
        "modifiedDate": "2026-05-22T20:53:34.347953819Z",
      },
      "name": "isPrivileged",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "boolean",
    },
    "2b899bc7-e5f2-4a81-b5e9-7917e2db56af": {
      "allowedValues": [],
      "description": "Test Role Description",
      "displayName": "Test Role Display Name",
      "enumeratedValues": [],
      "id": "2b899bc7-e5f2-4a81-b5e9-7917e2db56af",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-05-22T21:32:08.858479169Z",
        "modifiedDate": "2026-05-22T21:32:08.858499603Z",
      },
      "name": "testRole",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "2e9da388-6f0d-429b-b1a4-c2576a662aed": {
      "allowedValues": [
        1,
        2,
      ],
      "description": "Test Integers",
      "displayName": "Test Integer",
      "enumeratedValues": [
        {
          "text": 0,
          "value": 1,
        },
        {
          "text": 1,
          "value": 2,
        },
      ],
      "id": "2e9da388-6f0d-429b-b1a4-c2576a662aed",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:45.549356695Z",
        "modifiedDate": "2026-05-22T20:53:45.549358447Z",
      },
      "name": "Test Integer",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
    "313a5700-be3f-467f-af12-14f2b4567f2f": {
      "allowedValues": [
        "Value 1",
        "Value 2",
      ],
      "description": "Test String",
      "displayName": "Test String",
      "enumeratedValues": [
        {
          "text": "Text 1",
          "value": "Value 1",
        },
        {
          "text": "Text 2",
          "value": "Value 2",
        },
      ],
      "id": "313a5700-be3f-467f-af12-14f2b4567f2f",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:32.356482314Z",
        "modifiedDate": "2026-05-22T20:53:32.356485229Z",
      },
      "name": "Test String",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "355aa0a5-41a0-42e6-9596-2af945c9298e": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "355aa0a5-41a0-42e6-9596-2af945c9298e",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:30.317376293Z",
        "modifiedDate": "2026-05-22T20:53:30.31737878Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T21:31:59.65680504Z",
        "modifiedDate": "2026-05-22T21:31:59.656806762Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "4715678e-fb17-4afb-b0be-093870a6e151": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "4715678e-fb17-4afb-b0be-093870a6e151",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:28.351661848Z",
        "modifiedDate": "2026-05-22T20:53:28.351663775Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "4d4a82bc-a726-472a-9db3-e26d00d01538": {
      "allowedValues": [
        "high",
        "medium",
        "low",
        "null",
      ],
      "description": "",
      "displayName": "Risk Level",
      "enumeratedValues": [
        {
          "text": "High",
          "value": "high",
        },
        {
          "text": "Medium",
          "value": "medium",
        },
        {
          "text": "Low",
          "value": "low",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "4d4a82bc-a726-472a-9db3-e26d00d01538",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:27.391200564Z",
        "modifiedDate": "2026-05-22T20:53:27.391202721Z",
      },
      "name": "riskLevel",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "4ebd20fd-70d4-4a00-996f-aa76b639192e": {
      "allowedValues": [],
      "description": "Test Organization",
      "displayName": "Test Organization",
      "enumeratedValues": [],
      "id": "4ebd20fd-70d4-4a00-996f-aa76b639192e",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-05-22T20:53:35.367003643Z",
        "modifiedDate": "2026-05-22T20:53:35.367005507Z",
      },
      "name": "Test Organization",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "7178225b-8b88-4005-9de6-2136bb82b96f": {
      "allowedValues": [
        "3",
        "4",
      ],
      "description": "This is a test entitlement for frodo import/export functions.",
      "displayName": "Brycen's Test Entitlement",
      "enumeratedValues": [
        {
          "text": "Testing",
          "value": "3",
        },
        {
          "text": "TestingChange",
          "value": "4",
        },
      ],
      "id": "7178225b-8b88-4005-9de6-2136bb82b96f",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:39.456433855Z",
        "modifiedDate": "2026-05-22T20:53:39.456435853Z",
      },
      "name": "brycenTestItem",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "bdb3fbca-3c99-4c14-9705-c7ef9f2769cf": {
      "allowedValues": [],
      "description": "Test Date",
      "displayName": "Test Date",
      "enumeratedValues": [],
      "id": "bdb3fbca-3c99-4c14-9705-c7ef9f2769cf",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:41.482501597Z",
        "modifiedDate": "2026-05-22T20:53:41.482503616Z",
      },
      "name": "Test Date",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "date",
    },
    "cb607bc2-d4ad-4815-bea8-84b5bc36d4bc": {
      "allowedValues": [],
      "description": "Testing",
      "displayName": "CP Dummy Entitlement",
      "enumeratedValues": [],
      "id": "cb607bc2-d4ad-4815-bea8-84b5bc36d4bc",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:46.442665848Z",
        "modifiedDate": "2026-05-22T20:53:46.442667918Z",
      },
      "name": "CP-DummyEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "d27a22e1-8118-441f-b480-48c6b2e204d1": {
      "allowedValues": [
        "Text One",
        "Text Two",
        "Text Three",
      ],
      "description": "Test String Description",
      "displayName": "Test String Display Name",
      "enumeratedValues": [
        {
          "text": "text1",
          "value": "Text One",
        },
        {
          "text": "text2",
          "value": "Text Two",
        },
        {
          "text": "text3",
          "value": "Text Three",
        },
      ],
      "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T21:32:03.656671343Z",
        "modifiedDate": "2026-05-22T21:32:03.656673251Z",
      },
      "name": "testString",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2": {
      "allowedValues": [],
      "description": "Test User Description",
      "displayName": "Test User Display Name",
      "enumeratedValues": [],
      "id": "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-05-22T21:32:07.658008319Z",
        "modifiedDate": "2026-05-22T21:32:07.658010331Z",
      },
      "name": "testUser",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "e9462b74-6005-43db-80a2-6aca0f731310": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "e9462b74-6005-43db-80a2-6aca0f731310",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:38.44226322Z",
        "modifiedDate": "2026-05-22T20:53:38.442265667Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "f50f68c9-859c-4cea-9a82-6f66210b0272": {
      "allowedValues": [
        1.5,
        3.5,
      ],
      "description": "Test Double",
      "displayName": "Test Double",
      "enumeratedValues": [
        {
          "text": 0.5,
          "value": 1.5,
        },
        {
          "text": 2.5,
          "value": 3.5,
        },
      ],
      "id": "f50f68c9-859c-4cea-9a82-6f66210b0272",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:33.382344095Z",
        "modifiedDate": "2026-05-22T20:53:33.382345773Z",
      },
      "name": "Test Double",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemas() 2: Export existing glossary schemas with internal 1`] = `
{
  "glossarySchema": {
    "021ed7cf-116b-4003-9a63-a82431e44c8e": {
      "allowedValues": [],
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 6",
      "enumeratedValues": [],
      "id": "021ed7cf-116b-4003-9a63-a82431e44c8e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:34.91522564Z",
        "modifiedDate": "2026-05-22T17:35:11.684Z",
      },
      "name": "customAttribute6",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "0806c0c5-a6e9-4ec8-8a36-830f217637b3": {
      "allowedValues": [],
      "description": "Can the role be requested",
      "displayName": "Requestable",
      "id": "0806c0c5-a6e9-4ec8-8a36-830f217637b3",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:04.308367768Z",
        "modifiedDate": "2026-05-22T17:35:12.442Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "09c470af-abc5-4733-beaf-3d169b62a234": {
      "allowedValues": [],
      "description": "Actors for the account",
      "displayName": "Actors",
      "enumeratedValues": [],
      "id": "09c470af-abc5-4733-beaf-3d169b62a234",
      "isInternal": true,
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2025-10-27T18:13:19.780130996Z",
        "modifiedDate": "2026-05-22T17:35:15.472Z",
      },
      "name": "actors",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "0e1f922f-c9b9-40f2-964b-740f0ad47afb": {
      "allowedValues": [],
      "description": "Risk Score",
      "displayName": "Risk Score",
      "enumeratedValues": [],
      "id": "0e1f922f-c9b9-40f2-964b-740f0ad47afb",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:28.850616006Z",
        "modifiedDate": "2026-05-22T17:35:16.46Z",
      },
      "name": "riskScore",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "float",
    },
    "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e": {
      "allowedValues": [],
      "description": "Description of entitlement",
      "displayName": "Description",
      "id": "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:00.277228797Z",
        "modifiedDate": "2026-05-22T17:35:17.509Z",
      },
      "name": "description",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "0f7e9eb7-f40b-4800-a58f-64ec85eb158f": {
      "allowedValues": [],
      "description": "Test User",
      "displayName": "Test User",
      "enumeratedValues": [],
      "id": "0f7e9eb7-f40b-4800-a58f-64ec85eb158f",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-05-22T20:53:29.306203855Z",
        "modifiedDate": "2026-05-22T20:53:29.306206494Z",
      },
      "name": "Test User",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "12e51982-56a4-4f3d-9db1-2529276e2a05": {
      "allowedValues": [],
      "description": "Is this account locked?",
      "displayName": "Locked",
      "enumeratedValues": [],
      "id": "12e51982-56a4-4f3d-9db1-2529276e2a05",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:21.772411471Z",
        "modifiedDate": "2026-05-22T17:35:19.49Z",
      },
      "name": "locked",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "13118f54-6b81-4549-8cb5-3ca2996b13af": {
      "allowedValues": [
        "sales",
        "finance",
        "hr",
        "null",
      ],
      "description": "Application grant workflows example for LOB determines who it should go to",
      "displayName": "Line Of Business",
      "enumeratedValues": [
        {
          "text": "Sales",
          "value": "sales",
        },
        {
          "text": "Finance",
          "value": "finance",
        },
        {
          "text": "Human Resources",
          "value": "hr",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "13118f54-6b81-4549-8cb5-3ca2996b13af",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:42.438045793Z",
        "modifiedDate": "2026-05-22T20:53:42.438047509Z",
      },
      "name": "lineOfBusiness",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "1683c30a-b149-4bab-8187-5a67b0fe3704": {
      "allowedValues": [],
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 2",
      "enumeratedValues": [],
      "id": "1683c30a-b149-4bab-8187-5a67b0fe3704",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:30.903463463Z",
        "modifiedDate": "2026-05-22T17:35:21.527Z",
      },
      "name": "customAttribute2",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "16c42f91-43a0-4b89-8ece-0221df554aa4": {
      "allowedValues": [
        0,
        1,
        2,
      ],
      "description": "Test Integer Description",
      "displayName": "Test Integer Display Name",
      "enumeratedValues": [
        {
          "text": 1,
          "value": 0,
        },
        {
          "text": 2,
          "value": 1,
        },
        {
          "text": 3,
          "value": 2,
        },
      ],
      "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T21:32:01.620287931Z",
        "modifiedDate": "2026-05-22T21:32:01.620290585Z",
      },
      "name": "testInteger",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "integer",
    },
    "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3": {
      "allowedValues": [],
      "description": "Type of entitlement",
      "displayName": "Entitlement Type",
      "enumeratedValues": [],
      "id": "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:14:04.021339488Z",
        "modifiedDate": "2026-05-22T17:35:22.542Z",
      },
      "name": "entitlementType",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "1ff97005-8ba6-4249-8d4f-9a69d5ad09d2": {
      "allowedValues": [],
      "description": "Test Role",
      "displayName": "Test Role",
      "enumeratedValues": [],
      "id": "1ff97005-8ba6-4249-8d4f-9a69d5ad09d2",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-05-22T20:53:37.397504751Z",
        "modifiedDate": "2026-05-22T20:53:37.397506512Z",
      },
      "name": "Test Role",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "2133dfb9-7af2-4543-bcc5-74a884053b18": {
      "allowedValues": [],
      "description": "Test Organization Description",
      "displayName": "Test Organization Display Name",
      "enumeratedValues": [],
      "id": "2133dfb9-7af2-4543-bcc5-74a884053b18",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-05-22T21:32:05.63739784Z",
        "modifiedDate": "2026-05-22T21:32:05.637399501Z",
      },
      "name": "testOrg",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "2924e262-4728-4a5f-a342-3044d7939192": {
      "allowedValues": [],
      "description": "",
      "displayName": "Is Privileged",
      "enumeratedValues": [],
      "id": "2924e262-4728-4a5f-a342-3044d7939192",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:34.347952176Z",
        "modifiedDate": "2026-05-22T20:53:34.347953819Z",
      },
      "name": "isPrivileged",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "boolean",
    },
    "2a36a687-91c0-4fdc-8c73-b001618c2bc6": {
      "allowedValues": [],
      "description": "custom attribute 8",
      "displayName": "Custom Attribute 8",
      "enumeratedValues": [],
      "id": "2a36a687-91c0-4fdc-8c73-b001618c2bc6",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:36.931921121Z",
        "modifiedDate": "2026-05-22T17:35:25.597Z",
      },
      "name": "customAttribute8",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "2a9ce603-14d8-4689-8b2e-78829648b5b6": {
      "allowedValues": [],
      "description": "custom attribute 5",
      "displayName": "Custom Attribute 5",
      "enumeratedValues": [],
      "id": "2a9ce603-14d8-4689-8b2e-78829648b5b6",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:33.925339896Z",
        "modifiedDate": "2026-05-22T17:35:26.585Z",
      },
      "name": "customAttribute5",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "2b899bc7-e5f2-4a81-b5e9-7917e2db56af": {
      "allowedValues": [],
      "description": "Test Role Description",
      "displayName": "Test Role Display Name",
      "enumeratedValues": [],
      "id": "2b899bc7-e5f2-4a81-b5e9-7917e2db56af",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-05-22T21:32:08.858479169Z",
        "modifiedDate": "2026-05-22T21:32:08.858499603Z",
      },
      "name": "testRole",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "2e9da388-6f0d-429b-b1a4-c2576a662aed": {
      "allowedValues": [
        1,
        2,
      ],
      "description": "Test Integers",
      "displayName": "Test Integer",
      "enumeratedValues": [
        {
          "text": 0,
          "value": 1,
        },
        {
          "text": 1,
          "value": 2,
        },
      ],
      "id": "2e9da388-6f0d-429b-b1a4-c2576a662aed",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:45.549356695Z",
        "modifiedDate": "2026-05-22T20:53:45.549358447Z",
      },
      "name": "Test Integer",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
    "313a5700-be3f-467f-af12-14f2b4567f2f": {
      "allowedValues": [
        "Value 1",
        "Value 2",
      ],
      "description": "Test String",
      "displayName": "Test String",
      "enumeratedValues": [
        {
          "text": "Text 1",
          "value": "Value 1",
        },
        {
          "text": "Text 2",
          "value": "Value 2",
        },
      ],
      "id": "313a5700-be3f-467f-af12-14f2b4567f2f",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:32.356482314Z",
        "modifiedDate": "2026-05-22T20:53:32.356485229Z",
      },
      "name": "Test String",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "35094c80-ab3d-4c47-91ae-92175895b264": {
      "allowedValues": [],
      "description": "Confidence Score",
      "displayName": "Confidence Score",
      "enumeratedValues": [],
      "id": "35094c80-ab3d-4c47-91ae-92175895b264",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:27.843796005Z",
        "modifiedDate": "2026-05-22T17:35:27.588Z",
      },
      "name": "confidenceScore",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "float",
    },
    "355aa0a5-41a0-42e6-9596-2af945c9298e": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "355aa0a5-41a0-42e6-9596-2af945c9298e",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:30.317376293Z",
        "modifiedDate": "2026-05-22T20:53:30.31737878Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T21:31:59.65680504Z",
        "modifiedDate": "2026-05-22T21:31:59.656806762Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "4715678e-fb17-4afb-b0be-093870a6e151": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "4715678e-fb17-4afb-b0be-093870a6e151",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:28.351661848Z",
        "modifiedDate": "2026-05-22T20:53:28.351663775Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "4d4a82bc-a726-472a-9db3-e26d00d01538": {
      "allowedValues": [
        "high",
        "medium",
        "low",
        "null",
      ],
      "description": "",
      "displayName": "Risk Level",
      "enumeratedValues": [
        {
          "text": "High",
          "value": "high",
        },
        {
          "text": "Medium",
          "value": "medium",
        },
        {
          "text": "Low",
          "value": "low",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "4d4a82bc-a726-472a-9db3-e26d00d01538",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:27.391200564Z",
        "modifiedDate": "2026-05-22T20:53:27.391202721Z",
      },
      "name": "riskLevel",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "4ebd20fd-70d4-4a00-996f-aa76b639192e": {
      "allowedValues": [],
      "description": "Test Organization",
      "displayName": "Test Organization",
      "enumeratedValues": [],
      "id": "4ebd20fd-70d4-4a00-996f-aa76b639192e",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-05-22T20:53:35.367003643Z",
        "modifiedDate": "2026-05-22T20:53:35.367005507Z",
      },
      "name": "Test Organization",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "5807928e-804d-4fed-a887-33fd3d157a8f": {
      "allowedValues": [],
      "description": "Entitlement Owner of Object",
      "displayName": "Entitlement Owner",
      "id": "5807928e-804d-4fed-a887-33fd3d157a8f",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2025-10-27T18:26:01.270155621Z",
        "modifiedDate": "2026-05-22T17:35:29.612Z",
      },
      "name": "entitlementOwner",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "managedObject",
    },
    "5c5751e7-d0e3-4338-a198-ecfe33175ed6": {
      "allowedValues": [],
      "description": "Can the entitlement be requested",
      "displayName": "Requestable",
      "id": "5c5751e7-d0e3-4338-a198-ecfe33175ed6",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:02.398398257Z",
        "modifiedDate": "2026-05-22T17:35:30.634Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "boolean",
    },
    "5ef5a92e-c2e4-40e4-b232-e33649591b37": {
      "allowedValues": [],
      "description": "The subtype of the account",
      "displayName": "Account Subtype",
      "enumeratedValues": [],
      "id": "5ef5a92e-c2e4-40e4-b232-e33649591b37",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:40.980726934Z",
        "modifiedDate": "2026-05-22T17:35:31.63Z",
      },
      "name": "accountSubtype",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "61bf2199-c60a-4383-9457-2fe211d72c85": {
      "allowedValues": [],
      "description": "Last password change date",
      "displayName": "Last Password Change",
      "enumeratedValues": [],
      "id": "61bf2199-c60a-4383-9457-2fe211d72c85",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:26.820775485Z",
        "modifiedDate": "2026-05-22T17:35:32.659Z",
      },
      "name": "lastPasswordChange",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "6a1ea40d-d85d-4646-9331-73a048196fbf": {
      "allowedValues": [],
      "description": "Does the account have any SoD violations?",
      "displayName": "Has Policy Violations",
      "enumeratedValues": [],
      "id": "6a1ea40d-d85d-4646-9331-73a048196fbf",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:25.811651105Z",
        "modifiedDate": "2026-05-22T17:35:33.665Z",
      },
      "name": "hasPolicyViolations",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "7178225b-8b88-4005-9de6-2136bb82b96f": {
      "allowedValues": [
        "3",
        "4",
      ],
      "description": "This is a test entitlement for frodo import/export functions.",
      "displayName": "Brycen's Test Entitlement",
      "enumeratedValues": [
        {
          "text": "Testing",
          "value": "3",
        },
        {
          "text": "TestingChange",
          "value": "4",
        },
      ],
      "id": "7178225b-8b88-4005-9de6-2136bb82b96f",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:39.456433855Z",
        "modifiedDate": "2026-05-22T20:53:39.456435853Z",
      },
      "name": "brycenTestItem",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "71c188ff-ed53-438c-9476-043cba6e850b": {
      "allowedValues": [],
      "description": "Is this account an active account",
      "displayName": "Active",
      "enumeratedValues": [],
      "id": "71c188ff-ed53-438c-9476-043cba6e850b",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:20.774670219Z",
        "modifiedDate": "2026-05-22T17:35:34.672Z",
      },
      "name": "active",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "774d2515-6cb4-408d-bdae-63b7534dde39": {
      "allowedValues": [],
      "description": "Test Boolean",
      "displayName": "Test Boolean",
      "enumeratedValues": [],
      "id": "774d2515-6cb4-408d-bdae-63b7534dde39",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-05T23:57:19.037709455Z",
        "modifiedDate": "2026-05-22T17:35:35.683Z",
      },
      "name": "Test Boolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "8994aea6-96d7-4070-bb1b-f8f36576a23e": {
      "allowedValues": [],
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 3",
      "enumeratedValues": [],
      "id": "8994aea6-96d7-4070-bb1b-f8f36576a23e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:31.887340456Z",
        "modifiedDate": "2026-05-22T17:35:38.727Z",
      },
      "name": "customAttribute3",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "982113c6-3e20-401d-91a8-657cf429f85e": {
      "allowedValues": [],
      "description": "Is this account a privileged account",
      "displayName": "Privileged",
      "enumeratedValues": [],
      "id": "982113c6-3e20-401d-91a8-657cf429f85e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:18.776130434Z",
        "modifiedDate": "2026-05-22T17:35:39.727Z",
      },
      "name": "privileged",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "a65b7633-3dcb-4c83-8458-c14397f70715": {
      "allowedValues": [],
      "description": "Confidence Score",
      "displayName": "Confidence Score",
      "enumeratedValues": [],
      "id": "a65b7633-3dcb-4c83-8458-c14397f70715",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:41.990680485Z",
        "modifiedDate": "2026-05-22T17:35:41.752Z",
      },
      "name": "confidenceScore",
      "objectType": "/iga/governance/entitlementGrant",
      "searchable": true,
      "type": "float",
    },
    "a65b7633-3dcb-4c83-8458-c14397f70717": {
      "allowedValues": [],
      "description": "custom attribute 10",
      "displayName": "Custom Attribute 10",
      "enumeratedValues": [],
      "id": "a65b7633-3dcb-4c83-8458-c14397f70717",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:38.983976209Z",
        "modifiedDate": "2026-05-22T17:35:42.766Z",
      },
      "name": "customAttribute10",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "a7082d02-e673-4935-95d5-22c76c669cb4": {
      "allowedValues": [],
      "description": "Can the application be requested",
      "displayName": "Requestable",
      "id": "a7082d02-e673-4935-95d5-22c76c669cb4",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:03.309691431Z",
        "modifiedDate": "2026-05-22T17:35:43.789Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "boolean",
    },
    "a98091ec-0800-41ec-9ca0-4f5ec4f4a853": {
      "allowedValues": [],
      "description": "Is this account manuallyCorrelated",
      "displayName": "Manually Correlated",
      "enumeratedValues": [],
      "id": "a98091ec-0800-41ec-9ca0-4f5ec4f4a853",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:23.798074722Z",
        "modifiedDate": "2026-05-22T17:35:45.851Z",
      },
      "name": "manuallyCorrelated",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "b0bee61a-791b-44bf-a3b9-b6fec52df4f7": {
      "allowedValues": [],
      "description": "Entitlement that is the direct parent of this entitlement",
      "displayName": "Parent Entitlement",
      "enumeratedValues": [],
      "id": "b0bee61a-791b-44bf-a3b9-b6fec52df4f7",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:14:03.579746339Z",
        "modifiedDate": "2026-05-22T17:35:46.794Z",
      },
      "name": "parentEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "b1f1f37a-4134-43cd-8220-957cefbbe44e": {
      "allowedValues": [],
      "description": "custom attribute 4",
      "displayName": "Custom Attribute 4",
      "enumeratedValues": [],
      "id": "b1f1f37a-4134-43cd-8220-957cefbbe44e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:32.900052397Z",
        "modifiedDate": "2026-05-22T17:35:47.832Z",
      },
      "name": "customAttribute4",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "b42b143f-b33b-4b25-9448-2c9ff88e7ed5": {
      "allowedValues": [],
      "description": "custom attribute 7",
      "displayName": "Custom Attribute 7",
      "enumeratedValues": [],
      "id": "b42b143f-b33b-4b25-9448-2c9ff88e7ed5",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:35.92383714Z",
        "modifiedDate": "2026-05-22T17:35:48.824Z",
      },
      "name": "customAttribute7",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "bab632ff-9e7a-4a9d-a91b-c081ce091df7": {
      "allowedValues": [],
      "description": "Show last successful Login",
      "displayName": "Last Successful Login",
      "enumeratedValues": [],
      "id": "bab632ff-9e7a-4a9d-a91b-c081ce091df7",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:22.790654101Z",
        "modifiedDate": "2026-05-22T17:35:49.96Z",
      },
      "name": "lastSuccessfulLogin",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "bdb3fbca-3c99-4c14-9705-c7ef9f2769cf": {
      "allowedValues": [],
      "description": "Test Date",
      "displayName": "Test Date",
      "enumeratedValues": [],
      "id": "bdb3fbca-3c99-4c14-9705-c7ef9f2769cf",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:41.482501597Z",
        "modifiedDate": "2026-05-22T20:53:41.482503616Z",
      },
      "name": "Test Date",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "date",
    },
    "c8ed99f7-5442-43d5-8406-f39060c1bd73": {
      "allowedValues": [],
      "description": "The type of account",
      "displayName": "Account Type",
      "enumeratedValues": [],
      "id": "c8ed99f7-5442-43d5-8406-f39060c1bd73",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:39.982168872Z",
        "modifiedDate": "2026-05-22T17:35:53.888Z",
      },
      "name": "accountType",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "c9647722-5927-4826-9398-5349b56f793a": {
      "allowedValues": [],
      "description": "custom attribute 9",
      "displayName": "Custom Attribute 9",
      "enumeratedValues": [],
      "id": "c9647722-5927-4826-9398-5349b56f793a",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:37.946863301Z",
        "modifiedDate": "2026-05-22T17:35:54.898Z",
      },
      "name": "customAttribute9",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "cb607bc2-d4ad-4815-bea8-84b5bc36d4bc": {
      "allowedValues": [],
      "description": "Testing",
      "displayName": "CP Dummy Entitlement",
      "enumeratedValues": [],
      "id": "cb607bc2-d4ad-4815-bea8-84b5bc36d4bc",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:46.442665848Z",
        "modifiedDate": "2026-05-22T20:53:46.442667918Z",
      },
      "name": "CP-DummyEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "d27a22e1-8118-441f-b480-48c6b2e204d1": {
      "allowedValues": [
        "Text One",
        "Text Two",
        "Text Three",
      ],
      "description": "Test String Description",
      "displayName": "Test String Display Name",
      "enumeratedValues": [
        {
          "text": "text1",
          "value": "Text One",
        },
        {
          "text": "text2",
          "value": "Text Two",
        },
        {
          "text": "text3",
          "value": "Text Three",
        },
      ],
      "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T21:32:03.656671343Z",
        "modifiedDate": "2026-05-22T21:32:03.656673251Z",
      },
      "name": "testString",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc": {
      "allowedValues": [],
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 1",
      "enumeratedValues": [],
      "id": "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:29.870208095Z",
        "modifiedDate": "2026-05-22T17:35:57.912Z",
      },
      "name": "customAttribute1",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2": {
      "allowedValues": [],
      "description": "Test User Description",
      "displayName": "Test User Display Name",
      "enumeratedValues": [],
      "id": "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-05-22T21:32:07.658008319Z",
        "modifiedDate": "2026-05-22T21:32:07.658010331Z",
      },
      "name": "testUser",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab": {
      "allowedValues": [],
      "description": "When was account reconciled successfully",
      "displayName": "Last Sync",
      "enumeratedValues": [],
      "id": "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:24.803517454Z",
        "modifiedDate": "2026-05-22T17:36:01.962Z",
      },
      "name": "lastSync",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "e9462b74-6005-43db-80a2-6aca0f731310": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "e9462b74-6005-43db-80a2-6aca0f731310",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-05-22T20:53:38.44226322Z",
        "modifiedDate": "2026-05-22T20:53:38.442265667Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "f1cc3b53-ef38-4ad7-b268-1ee482a411ef": {
      "allowedValues": [],
      "description": "Role Owner of Object",
      "displayName": "Role Owner",
      "id": "f1cc3b53-ef38-4ad7-b268-1ee482a411ef",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2025-10-27T18:13:17.537439106Z",
        "modifiedDate": "2026-05-22T17:36:04.004Z",
      },
      "name": "roleOwner",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "managedObject",
    },
    "f50f68c9-859c-4cea-9a82-6f66210b0272": {
      "allowedValues": [
        1.5,
        3.5,
      ],
      "description": "Test Double",
      "displayName": "Test Double",
      "enumeratedValues": [
        {
          "text": 0.5,
          "value": 1.5,
        },
        {
          "text": 2.5,
          "value": 3.5,
        },
      ],
      "id": "f50f68c9-859c-4cea-9a82-6f66210b0272",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-05-22T20:53:33.382344095Z",
        "modifiedDate": "2026-05-22T20:53:33.382345773Z",
      },
      "name": "Test Double",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps importGlossarySchemas() 1: Import None 1`] = `[]`;

exports[`IgaGlossaryOps importGlossarySchemas() 2: Import by ID 1`] = `
[
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
]
`;

exports[`IgaGlossaryOps importGlossarySchemas() 3: Import by Name 1`] = `
[
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
]
`;

exports[`IgaGlossaryOps importGlossarySchemas() 4: Import all 1`] = `
[
  {
    "allowedValues": [
      0,
      1,
      2,
    ],
    "description": "Test Integer Description",
    "displayName": "Test Integer Display Name",
    "enumeratedValues": [
      {
        "text": 1,
        "value": 0,
      },
      {
        "text": 2,
        "value": 1,
      },
      {
        "text": 3,
        "value": 2,
      },
    ],
    "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
    "isMultiValue": true,
    "name": "testInteger",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "integer",
  },
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Date Description",
    "displayName": "Test Date Display Name",
    "enumeratedValues": [],
    "id": "1c3d87ab-9ed6-4066-a772-31263bb922cd",
    "isMultiValue": false,
    "name": "testDate",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "date",
  },
]
`;

exports[`IgaGlossaryOps readGlossarySchema() 1: Read existing glossary schema by ID 1`] = `
{
  "allowedValues": [],
  "description": "Test Boolean Description",
  "displayName": "Test Boolean Display Name",
  "enumeratedValues": [],
  "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
  "isMultiValue": false,
  "metadata": {
    "createdDate": "2026-05-22T21:31:59.65680504Z",
    "modifiedDate": "2026-05-22T21:31:59.656806762Z",
  },
  "name": "testBoolean",
  "objectType": "/openidm/managed/role",
  "searchable": true,
  "type": "boolean",
}
`;

exports[`IgaGlossaryOps readGlossarySchemaByName() 1: Read existing glossary schema by name and objectype 1`] = `
{
  "allowedValues": [],
  "description": "Test Boolean Description",
  "displayName": "Test Boolean Display Name",
  "enumeratedValues": [],
  "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
  "isMultiValue": false,
  "metadata": {
    "createdDate": "2026-05-22T21:31:59.65680504Z",
    "modifiedDate": "2026-05-22T21:31:59.656806762Z",
  },
  "name": "testBoolean",
  "objectType": "/openidm/managed/role",
  "searchable": true,
  "type": "boolean",
}
`;

exports[`IgaGlossaryOps readGlossarySchemas() 1: Read existing glossary schemas 1`] = `
[
  {
    "allowedValues": [],
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 6",
    "enumeratedValues": [],
    "id": "021ed7cf-116b-4003-9a63-a82431e44c8e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:34.91522564Z",
      "modifiedDate": "2026-05-22T17:35:11.684Z",
    },
    "name": "customAttribute6",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Can the role be requested",
    "displayName": "Requestable",
    "id": "0806c0c5-a6e9-4ec8-8a36-830f217637b3",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:04.308367768Z",
      "modifiedDate": "2026-05-22T17:35:12.442Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Actors for the account",
    "displayName": "Actors",
    "enumeratedValues": [],
    "id": "09c470af-abc5-4733-beaf-3d169b62a234",
    "isInternal": true,
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2025-10-27T18:13:19.780130996Z",
      "modifiedDate": "2026-05-22T17:35:15.472Z",
    },
    "name": "actors",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Risk Score",
    "displayName": "Risk Score",
    "enumeratedValues": [],
    "id": "0e1f922f-c9b9-40f2-964b-740f0ad47afb",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:28.850616006Z",
      "modifiedDate": "2026-05-22T17:35:16.46Z",
    },
    "name": "riskScore",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "float",
  },
  {
    "allowedValues": [],
    "description": "Description of entitlement",
    "displayName": "Description",
    "id": "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:00.277228797Z",
      "modifiedDate": "2026-05-22T17:35:17.509Z",
    },
    "name": "description",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test User",
    "displayName": "Test User",
    "enumeratedValues": [],
    "id": "0f7e9eb7-f40b-4800-a58f-64ec85eb158f",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2026-05-22T20:53:29.306203855Z",
      "modifiedDate": "2026-05-22T20:53:29.306206494Z",
    },
    "name": "Test User",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Test Organization Description",
    "displayName": "Test Organization Display Name",
    "enumeratedValues": [],
    "id": "2133dfb9-7af2-4543-bcc5-74a884053b18",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/organization",
    "metadata": {
      "createdDate": "2026-05-22T21:32:05.63739784Z",
      "modifiedDate": "2026-05-22T21:32:05.637399501Z",
    },
    "name": "testOrg",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Is this account locked?",
    "displayName": "Locked",
    "enumeratedValues": [],
    "id": "12e51982-56a4-4f3d-9db1-2529276e2a05",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:21.772411471Z",
      "modifiedDate": "2026-05-22T17:35:19.49Z",
    },
    "name": "locked",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [
      "sales",
      "finance",
      "hr",
      "null",
    ],
    "description": "Application grant workflows example for LOB determines who it should go to",
    "displayName": "Line Of Business",
    "enumeratedValues": [
      {
        "text": "Sales",
        "value": "sales",
      },
      {
        "text": "Finance",
        "value": "finance",
      },
      {
        "text": "Human Resources",
        "value": "hr",
      },
      {
        "text": "Other",
        "value": "null",
      },
    ],
    "id": "13118f54-6b81-4549-8cb5-3ca2996b13af",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:42.438045793Z",
      "modifiedDate": "2026-05-22T20:53:42.438047509Z",
    },
    "name": "lineOfBusiness",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 2",
    "enumeratedValues": [],
    "id": "1683c30a-b149-4bab-8187-5a67b0fe3704",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:30.903463463Z",
      "modifiedDate": "2026-05-22T17:35:21.527Z",
    },
    "name": "customAttribute2",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Type of entitlement",
    "displayName": "Entitlement Type",
    "enumeratedValues": [],
    "id": "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:14:04.021339488Z",
      "modifiedDate": "2026-05-22T17:35:22.542Z",
    },
    "name": "entitlementType",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Role",
    "displayName": "Test Role",
    "enumeratedValues": [],
    "id": "1ff97005-8ba6-4249-8d4f-9a69d5ad09d2",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/role",
    "metadata": {
      "createdDate": "2026-05-22T20:53:37.397504751Z",
      "modifiedDate": "2026-05-22T20:53:37.397506512Z",
    },
    "name": "Test Role",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "",
    "displayName": "Is Privileged",
    "enumeratedValues": [],
    "id": "2924e262-4728-4a5f-a342-3044d7939192",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:34.347952176Z",
      "modifiedDate": "2026-05-22T20:53:34.347953819Z",
    },
    "name": "isPrivileged",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 8",
    "displayName": "Custom Attribute 8",
    "enumeratedValues": [],
    "id": "2a36a687-91c0-4fdc-8c73-b001618c2bc6",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:36.931921121Z",
      "modifiedDate": "2026-05-22T17:35:25.597Z",
    },
    "name": "customAttribute8",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 5",
    "displayName": "Custom Attribute 5",
    "enumeratedValues": [],
    "id": "2a9ce603-14d8-4689-8b2e-78829648b5b6",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:33.925339896Z",
      "modifiedDate": "2026-05-22T17:35:26.585Z",
    },
    "name": "customAttribute5",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Role Description",
    "displayName": "Test Role Display Name",
    "enumeratedValues": [],
    "id": "2b899bc7-e5f2-4a81-b5e9-7917e2db56af",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/role",
    "metadata": {
      "createdDate": "2026-05-22T21:32:08.858479169Z",
      "modifiedDate": "2026-05-22T21:32:08.858499603Z",
    },
    "name": "testRole",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      1,
      2,
    ],
    "description": "Test Integers",
    "displayName": "Test Integer",
    "enumeratedValues": [
      {
        "text": 0,
        "value": 1,
      },
      {
        "text": 1,
        "value": 2,
      },
    ],
    "id": "2e9da388-6f0d-429b-b1a4-c2576a662aed",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T20:53:45.549356695Z",
      "modifiedDate": "2026-05-22T20:53:45.549358447Z",
    },
    "name": "Test Integer",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "integer",
  },
  {
    "allowedValues": [
      "Value 1",
      "Value 2",
    ],
    "description": "Test String",
    "displayName": "Test String",
    "enumeratedValues": [
      {
        "text": "Text 1",
        "value": "Value 1",
      },
      {
        "text": "Text 2",
        "value": "Value 2",
      },
    ],
    "id": "313a5700-be3f-467f-af12-14f2b4567f2f",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T20:53:32.356482314Z",
      "modifiedDate": "2026-05-22T20:53:32.356485229Z",
    },
    "name": "Test String",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Confidence Score",
    "displayName": "Confidence Score",
    "enumeratedValues": [],
    "id": "35094c80-ab3d-4c47-91ae-92175895b264",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:27.843796005Z",
      "modifiedDate": "2026-05-22T17:35:27.588Z",
    },
    "name": "confidenceScore",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "float",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "355aa0a5-41a0-42e6-9596-2af945c9298e",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:30.317376293Z",
      "modifiedDate": "2026-05-22T20:53:30.31737878Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T21:32:03.656671343Z",
      "modifiedDate": "2026-05-22T21:32:03.656673251Z",
    },
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "4715678e-fb17-4afb-b0be-093870a6e151",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:28.351661848Z",
      "modifiedDate": "2026-05-22T20:53:28.351663775Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test User Description",
    "displayName": "Test User Display Name",
    "enumeratedValues": [],
    "id": "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2026-05-22T21:32:07.658008319Z",
      "modifiedDate": "2026-05-22T21:32:07.658010331Z",
    },
    "name": "testUser",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      "high",
      "medium",
      "low",
      "null",
    ],
    "description": "",
    "displayName": "Risk Level",
    "enumeratedValues": [
      {
        "text": "High",
        "value": "high",
      },
      {
        "text": "Medium",
        "value": "medium",
      },
      {
        "text": "Low",
        "value": "low",
      },
      {
        "text": "Other",
        "value": "null",
      },
    ],
    "id": "4d4a82bc-a726-472a-9db3-e26d00d01538",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:27.391200564Z",
      "modifiedDate": "2026-05-22T20:53:27.391202721Z",
    },
    "name": "riskLevel",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Organization",
    "displayName": "Test Organization",
    "enumeratedValues": [],
    "id": "4ebd20fd-70d4-4a00-996f-aa76b639192e",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/organization",
    "metadata": {
      "createdDate": "2026-05-22T20:53:35.367003643Z",
      "modifiedDate": "2026-05-22T20:53:35.367005507Z",
    },
    "name": "Test Organization",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Entitlement Owner of Object",
    "displayName": "Entitlement Owner",
    "id": "5807928e-804d-4fed-a887-33fd3d157a8f",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2025-10-27T18:26:01.270155621Z",
      "modifiedDate": "2026-05-22T17:35:29.612Z",
    },
    "name": "entitlementOwner",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Can the entitlement be requested",
    "displayName": "Requestable",
    "id": "5c5751e7-d0e3-4338-a198-ecfe33175ed6",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:02.398398257Z",
      "modifiedDate": "2026-05-22T17:35:30.634Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "The subtype of the account",
    "displayName": "Account Subtype",
    "enumeratedValues": [],
    "id": "5ef5a92e-c2e4-40e4-b232-e33649591b37",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:40.980726934Z",
      "modifiedDate": "2026-05-22T17:35:31.63Z",
    },
    "name": "accountSubtype",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Last password change date",
    "displayName": "Last Password Change",
    "enumeratedValues": [],
    "id": "61bf2199-c60a-4383-9457-2fe211d72c85",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:26.820775485Z",
      "modifiedDate": "2026-05-22T17:35:32.659Z",
    },
    "name": "lastPasswordChange",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "Test Boolean Description",
    "displayName": "Test Boolean Display Name",
    "enumeratedValues": [],
    "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T21:31:59.65680504Z",
      "modifiedDate": "2026-05-22T21:31:59.656806762Z",
    },
    "name": "testBoolean",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Does the account have any SoD violations?",
    "displayName": "Has Policy Violations",
    "enumeratedValues": [],
    "id": "6a1ea40d-d85d-4646-9331-73a048196fbf",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:25.811651105Z",
      "modifiedDate": "2026-05-22T17:35:33.665Z",
    },
    "name": "hasPolicyViolations",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [
      "3",
      "4",
    ],
    "description": "This is a test entitlement for frodo import/export functions.",
    "displayName": "Brycen's Test Entitlement",
    "enumeratedValues": [
      {
        "text": "Testing",
        "value": "3",
      },
      {
        "text": "TestingChange",
        "value": "4",
      },
    ],
    "id": "7178225b-8b88-4005-9de6-2136bb82b96f",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T20:53:39.456433855Z",
      "modifiedDate": "2026-05-22T20:53:39.456435853Z",
    },
    "name": "brycenTestItem",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Is this account an active account",
    "displayName": "Active",
    "enumeratedValues": [],
    "id": "71c188ff-ed53-438c-9476-043cba6e850b",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:20.774670219Z",
      "modifiedDate": "2026-05-22T17:35:34.672Z",
    },
    "name": "active",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Test Boolean",
    "displayName": "Test Boolean",
    "enumeratedValues": [],
    "id": "774d2515-6cb4-408d-bdae-63b7534dde39",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-01-05T23:57:19.037709455Z",
      "modifiedDate": "2026-05-22T17:35:35.683Z",
    },
    "name": "Test Boolean",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 3",
    "enumeratedValues": [],
    "id": "8994aea6-96d7-4070-bb1b-f8f36576a23e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:31.887340456Z",
      "modifiedDate": "2026-05-22T17:35:38.727Z",
    },
    "name": "customAttribute3",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      0,
      1,
      2,
    ],
    "description": "Test Integer Description",
    "displayName": "Test Integer Display Name",
    "enumeratedValues": [
      {
        "text": 1,
        "value": 0,
      },
      {
        "text": 2,
        "value": 1,
      },
      {
        "text": 3,
        "value": 2,
      },
    ],
    "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T21:32:01.620287931Z",
      "modifiedDate": "2026-05-22T21:32:01.620290585Z",
    },
    "name": "testInteger",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "integer",
  },
  {
    "allowedValues": [],
    "description": "Is this account a privileged account",
    "displayName": "Privileged",
    "enumeratedValues": [],
    "id": "982113c6-3e20-401d-91a8-657cf429f85e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:18.776130434Z",
      "modifiedDate": "2026-05-22T17:35:39.727Z",
    },
    "name": "privileged",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Confidence Score",
    "displayName": "Confidence Score",
    "enumeratedValues": [],
    "id": "a65b7633-3dcb-4c83-8458-c14397f70715",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:41.990680485Z",
      "modifiedDate": "2026-05-22T17:35:41.752Z",
    },
    "name": "confidenceScore",
    "objectType": "/iga/governance/entitlementGrant",
    "searchable": true,
    "type": "float",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 10",
    "displayName": "Custom Attribute 10",
    "enumeratedValues": [],
    "id": "a65b7633-3dcb-4c83-8458-c14397f70717",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:38.983976209Z",
      "modifiedDate": "2026-05-22T17:35:42.766Z",
    },
    "name": "customAttribute10",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Can the application be requested",
    "displayName": "Requestable",
    "id": "a7082d02-e673-4935-95d5-22c76c669cb4",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:03.309691431Z",
      "modifiedDate": "2026-05-22T17:35:43.789Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Is this account manuallyCorrelated",
    "displayName": "Manually Correlated",
    "enumeratedValues": [],
    "id": "a98091ec-0800-41ec-9ca0-4f5ec4f4a853",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:23.798074722Z",
      "modifiedDate": "2026-05-22T17:35:45.851Z",
    },
    "name": "manuallyCorrelated",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Entitlement that is the direct parent of this entitlement",
    "displayName": "Parent Entitlement",
    "enumeratedValues": [],
    "id": "b0bee61a-791b-44bf-a3b9-b6fec52df4f7",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:14:03.579746339Z",
      "modifiedDate": "2026-05-22T17:35:46.794Z",
    },
    "name": "parentEntitlement",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 4",
    "displayName": "Custom Attribute 4",
    "enumeratedValues": [],
    "id": "b1f1f37a-4134-43cd-8220-957cefbbe44e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:32.900052397Z",
      "modifiedDate": "2026-05-22T17:35:47.832Z",
    },
    "name": "customAttribute4",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 7",
    "displayName": "Custom Attribute 7",
    "enumeratedValues": [],
    "id": "b42b143f-b33b-4b25-9448-2c9ff88e7ed5",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:35.92383714Z",
      "modifiedDate": "2026-05-22T17:35:48.824Z",
    },
    "name": "customAttribute7",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Show last successful Login",
    "displayName": "Last Successful Login",
    "enumeratedValues": [],
    "id": "bab632ff-9e7a-4a9d-a91b-c081ce091df7",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:22.790654101Z",
      "modifiedDate": "2026-05-22T17:35:49.96Z",
    },
    "name": "lastSuccessfulLogin",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "Test Date",
    "displayName": "Test Date",
    "enumeratedValues": [],
    "id": "bdb3fbca-3c99-4c14-9705-c7ef9f2769cf",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:41.482501597Z",
      "modifiedDate": "2026-05-22T20:53:41.482503616Z",
    },
    "name": "Test Date",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "The type of account",
    "displayName": "Account Type",
    "enumeratedValues": [],
    "id": "c8ed99f7-5442-43d5-8406-f39060c1bd73",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:39.982168872Z",
      "modifiedDate": "2026-05-22T17:35:53.888Z",
    },
    "name": "accountType",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 9",
    "displayName": "Custom Attribute 9",
    "enumeratedValues": [],
    "id": "c9647722-5927-4826-9398-5349b56f793a",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:37.946863301Z",
      "modifiedDate": "2026-05-22T17:35:54.898Z",
    },
    "name": "customAttribute9",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Testing",
    "displayName": "CP Dummy Entitlement",
    "enumeratedValues": [],
    "id": "cb607bc2-d4ad-4815-bea8-84b5bc36d4bc",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:46.442665848Z",
      "modifiedDate": "2026-05-22T20:53:46.442667918Z",
    },
    "name": "CP-DummyEntitlement",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 1",
    "enumeratedValues": [],
    "id": "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:29.870208095Z",
      "modifiedDate": "2026-05-22T17:35:57.912Z",
    },
    "name": "customAttribute1",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "When was account reconciled successfully",
    "displayName": "Last Sync",
    "enumeratedValues": [],
    "id": "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:24.803517454Z",
      "modifiedDate": "2026-05-22T17:36:01.962Z",
    },
    "name": "lastSync",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "e9462b74-6005-43db-80a2-6aca0f731310",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-05-22T20:53:38.44226322Z",
      "modifiedDate": "2026-05-22T20:53:38.442265667Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Role Owner of Object",
    "displayName": "Role Owner",
    "id": "f1cc3b53-ef38-4ad7-b268-1ee482a411ef",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2025-10-27T18:13:17.537439106Z",
      "modifiedDate": "2026-05-22T17:36:04.004Z",
    },
    "name": "roleOwner",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      1.5,
      3.5,
    ],
    "description": "Test Double",
    "displayName": "Test Double",
    "enumeratedValues": [
      {
        "text": 0.5,
        "value": 1.5,
      },
      {
        "text": 2.5,
        "value": 3.5,
      },
    ],
    "id": "f50f68c9-859c-4cea-9a82-6f66210b0272",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-05-22T20:53:33.382344095Z",
      "modifiedDate": "2026-05-22T20:53:33.382345773Z",
    },
    "name": "Test Double",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "integer",
  },
]
`;

exports[`IgaGlossaryOps updateGlossarySchema() 1: Update existing glossary schema 1`] = `
{
  "allowedValues": [
    0,
    1,
    2,
  ],
  "description": "Test Integer Description",
  "displayName": "Test Integer Display Name",
  "enumeratedValues": [
    {
      "text": 1,
      "value": 0,
    },
    {
      "text": 2,
      "value": 1,
    },
    {
      "text": 3,
      "value": 2,
    },
  ],
  "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
  "isMultiValue": true,
  "name": "testInteger",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "integer",
}
`;
